Create R project and add README

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,19 +1,22 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
-tmuxr
-=====
 
-The `tmuxr` package allows you to control [tmux](https://github.com/tmux/tmux/wiki) from R.
+# tmuxr
+
+The `tmuxr` package allows you to control [tmux](https://github.com/tmux/tmux/wiki) from R. 
 
 ### Installation
 
 You can install `tmuxr` from GitHub with:
 
-``` r
+```R
 # install.packages("devtools")
 devtools::install_github("datascienceworkshops/tmuxr")
 ```
 
 ### License
 
-The `tmuxr` package is licensed under the GPLv3 (<http://www.gnu.org/licenses/gpl.html>).
+The `tmuxr` package is licensed under the GPLv3 (http://www.gnu.org/licenses/gpl.html).
