--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,81 @@ You can install `tmuxr` from GitHub with:
 devtools::install_github("datascienceworkshops/tmuxr")
 ```
 
+### Examples
+
+```{r}
+library(tmuxr)
+```
+
+#### Bash
+
+```{r}
+s <- new_session(shell_command = "PS1='$ ' bash")
+wait_for_prompt(s)
+send_lines(s, c("seq 100 |",
+                "grep 3 |",
+                "wc -l ",
+                "date"))
+capture_pane(s, trim = TRUE)
+kill_session(s)
+```
+
+#### Full screen capture
+
+```{r}
+new_session() %>%
+  send_keys("htop") %>%
+  send_enter() %>%
+  wait(2) %>%
+  capture_pane(as_message = TRUE) %>%
+  send_keys("q")
+```
+
+#### Jupyter console
+
+```{r}
+jupyter <- new_session(name = "python",
+                       shell_command = "jupyter console",
+                       prompt = prompts$jupyter)
+
+jupyter$prompt
+
+jupyter %>%
+  wait_for_prompt() %>%
+  send_lines(c("def mysum(a, b):",
+               "return a + b",
+               "",
+               "")) %>%
+  capture_pane(as_message = TRUE, strip_lonely_prompt = FALSE, trim = TRUE)
+```
+
+
+#### Telnet
+
+```{r, cache=TRUE}
+new_session(shell_command = "telnet", prompt = "^telnet>$") %>%
+  send_keys("open towel.blinkenlights.nl") %>%
+  send_enter() %>%
+  wait(26) %>%
+  capture_pane(as_message = TRUE) %>%
+  kill_session()
+```
+
+#### Continue with earlier session
+
+```{r}
+session_from_name("python", prompt = prompts$jupyter) %>%
+  wait(0.2) %>%
+  send_lines("mysum(41, 1)") %>%
+  wait(0.2) %>%
+  capture_pane(start = 18, as_message = TRUE)
+```
+
+```{r}
+list_sessions()
+kill_server()
+```
+
 ### License
 
 The `tmuxr` package is licensed under the GPLv3 (http://www.gnu.org/licenses/gpl.html).
