--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-`tmuxr` is an R package that allows you (1) to manage [tmux](https://github.com/tmux/tmux/wiki) and (2) to interact with the processes it runs.
+`tmuxr` is an R package that allows you (1) to manage [tmux](https://github.com/tmux/tmux/wiki) and (2) to interact with the processes it runs. It features a pipeable API with which you can create, control, and capture tmux sessions, windows, and panes.
 
 Most functions, such as `new_session`, `list_windows`, and `send_keys` are inspired by the commands `tmux` offers. Other functions, such as `attach_window`, `wait_for_prompt`, `send_lines` are added for convenience. Please note that not all `tmux` commands have yet been implemented. 
 
@@ -48,9 +48,9 @@ s <- new_session(shell_command = "PS1='$ ' bash",
                  prompt = prompts$bash)
 wait_for_prompt(s)
 send_lines(s, c("seq 100 |",
-               "grep 3 |",
-               "wc -l ",
-               "date"))
+                "grep 3 |",
+                "wc -l ",
+                "date"))
 capture_pane(s, trim = TRUE)
 kill_session(s)
 ```
@@ -65,6 +65,18 @@ kill_session(s)
 <!--   capture_pane(as_message = TRUE) %>% -->
 <!--   send_keys("q") -->
 <!-- ``` -->
+
+### Run R via Docker
+
+```{r}
+new_session(shell_command = "docker run --rm -it rocker/tidyverse R",
+            prompt = prompts$R,
+            name = "docker_R") %>%
+  send_lines(c("library(tidyverse)",
+               "sessionInfo()")) %>%
+  capture_pane(as_message = TRUE)
+```
+
 
 ### Jupyter console
 
@@ -85,18 +97,19 @@ jupyter %>%
 ```
 
 
-<!-- #### Telnet -->
+### Capture a telnet session
 
-<!-- ```{r, cache=TRUE} -->
-<!-- new_session(shell_command = "telnet", prompt = "^telnet>$") %>% -->
-<!--   send_keys("open towel.blinkenlights.nl") %>% -->
-<!--   send_enter() %>% -->
-<!--   wait(26) %>% -->
-<!--   capture_pane(as_message = TRUE) %>% -->
-<!--   kill_session() -->
-<!-- ``` -->
+```{r, cache=TRUE}
+new_session(shell_command = "telnet", prompt = "^telnet>$") %>%
+  send_keys("open towel.blinkenlights.nl") %>%
+  send_enter() %>%
+  wait(26) %>%
+  capture_pane(as_message = TRUE, trim = FALSE) %>%
+  kill_session()
+```
 
-### Continue with earlier session
+
+### Continue with an existing session
 
 ```{r}
 attach_session("python", prompt = prompts$jupyter) %>%
