--- a/README.Rmd
+++ b/README.Rmd
@@ -31,7 +31,7 @@ Most functions, such as `new_session`, `list_windows`, and `send_keys` are inspi
 
 The main reason `tmuxr` exists is because of the [knitractive](https://datascienceworkshops.github.io/knitractive/) package. This package provides a knitr engine that allows you to simulate interactive sessions (e.g., Python console, Bash shell) across multiple code chunks. Interactive sessions are run inside a `tmux` session. We realized that the functionality for managing `tmux` could be useful in itself or as a basis for other packages as well, and hence decided to put that functionality into its own package.
 
-Generally speaking, `tmuxr` might be of interest to you if you want to automate interacte applications such as `bash`, `ssh`, and command-line interfaces. Have a look at the examples below.
+Generally speaking, `tmuxr` might be of interest to you if you want to automate interactive applications such as `bash`, `ssh`, and command-line interfaces. Have a look at the examples below.
 
 ## Installation
 
