Fix link to reference

--- a/README.Rmd
+++ b/README.Rmd
@@ -96,7 +96,7 @@ Indeed, in R version 3.1, `t.test()` does not return the standard error of the m
 kill_session(s)
 ```
 
-That concludes the demonstration. Note that tmux (and, as a result `tmuxr`) can run any process that runs in a terminal, not just R. Please have a look at [the reference](reference/) to learn more about what `tmuxr` has to offer.
+That concludes the demonstration. Note that tmux (and, as a result `tmuxr`) can run any process that runs in a terminal, not just R. Please have a look at [the reference](https://datascienceworkshops.github.io/tmuxr/reference/) to learn more about what `tmuxr` has to offer.
 
 
 ## Compatibility
