--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ knitr::opts_chunk$set(
 
 The recording below demonstrates various capabilities of `tmuxr` such as: running processes, sending keys, splitting windows, and capturing panes. Note that normally, managing tmux and the processes it runs is done in a detached mode, so you wouldn't see anything, but the result would be the same.
 
-<asciinema-player src="reference/figures/tmuxr.cast" cols="114" rows="38" poster="npt:0:52"></asciinema-player>
+<script id="asciicast-325231" src="https://asciinema.org/a/325231.js" async></script>
 
 Have a look at [the reference](https://datascienceworkshops.github.io/tmuxr/reference/) to learn more about what `tmuxr` has to offer.
 
