--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-`tmuxr` is an R package that allows you to manage [tmux](https://github.com/tmux/tmux/wiki) and interact with the processes it runs. It features a pipeable API with which you can create, control, and capture tmux sessions, windows, and panes. 
+`tmuxr` is an R package that allows you to manage [tmux](https://github.com/tmux/tmux/wiki) and interact with the processes it runs. It features a pipable API with which you can create, control, and capture tmux sessions, windows, and panes. 
 
 ## Demonstration
 
