--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,6 @@ knitr::opts_chunk$set(
 [![R build status](https://github.com/datascienceworkshops/tmuxr/workflows/R-CMD-check/badge.svg)](https://github.com/datascienceworkshops/tmuxr/actions)
 [![codecov](https://codecov.io/gh/datascienceworkshops/tmuxr/branch/master/graph/badge.svg)](https://codecov.io/gh/datascienceworkshops/tmuxr)
 [![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-green.svg)](https://www.tidyverse.org/lifecycle/#stable)
-[![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/tmuxr)](https://cran.r-project.org/package=tmuxr)
 
 ## Overview
 
@@ -35,7 +34,7 @@ Have a look at [the function reference](https://datascienceworkshops.github.io/t
 
 ## Installation
 
-`tmuxr` is available through CRAN and can be installed with `install.packages("tmuxr")`. The development version can be installed from this repository using `remotes`:
+`tmuxr` can be installed from this repository using `remotes`:
 
 ```{r, eval=FALSE}
 # install.packages("remotes")
